Expose vector module in configs and use in tests ()