@@ -83,6 +83,7 @@
       --add-opens=java.base/java.nio=ALL-UNNAMED
       --add-opens=java.base/java.io=ALL-UNNAMED
       --add-opens=java.base/sun.nio.ch=ALL-UNNAMED
+      --add-modules=jdk.incubator.vector
     </jdk.custom.options>
     <test.runner.jvm/>
     <test.runner.jvm.settings.additional/>
